Modificações Nos Registros de Alimentos

--- a/SPRINT4/Login/html/login.html
+++ b/SPRINT4/Login/html/login.html
@@ -8,35 +8,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/login2.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="menu-toggle">
         <i class="fas fa-bars"></i>
     </div>
-    <div class="sidebar">
-        <div class="logo">
-            <div class="cross"></div>
+    <div class="top-sidebar">
+        <div class="top-sidebar-content">
+            <div class="logo">
+                <div class="cross"></div>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="../../Tela Inicial/html/TelaInicial.html" style="text-decoration: none; color: inherit;"><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></a></li>
+                    <li><a href="../../telaRegistros/html/registros_alimentacao.html" style="text-decoration: none; color: inherit;"><i class="fas fa-apple-alt"></i> <span class="menu-text">Registros Alimentação</span></a></li>
+                    <li><a href="../../telaRegistros/html/telaRegistros.html" style="text-decoration: none; color: inherit;"><i class="fas fa-dumbbell"></i> <span class="menu-text">Registros Atividades Físicas</span></a></li>
+                    <li><a href="../../Dasboard/html/dashboard.html" style="text-decoration: none; color: inherit;"><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></a></li>
+                    <li><a href="../../Tela Educacao/HTML/nova.html" style="text-decoration: none; color: inherit;"><i class="fas fa-book"></i> <span class="menu-text">Educação</span></a></li>
+                </ul>
+            </div>
+            <div class="top-switch-profile">
+                <div class="switch">
+                    <i class="fas fa-sun"></i>
+                    <span class="switch__track"></span>
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="profile-icon">
+                    <i class="fas fa-user-circle"></i>
+                </div>
+            </div>
+            <div class="menu-toggle top-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
-        <div class="menu">
-            <ul>
-                <li onclick="location.href='../../../Tela Inicial/html/TelaInicial.html'">
-                    <i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span>
-                </li>
-                <li onclick="location.href='#'">
-                    <i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span>
-                </li>
-                <li onclick="location.href='#'">
-                    <i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span>
-                </li>
-            </ul>
-        </div>
-        <div class="switch">
-          <i class="fas fa-sun"></i>
-          <span class="switch__track"></span>
-          <i class="fas fa-moon"></i>
-      </div>
+    </div>
       
     </div>
 
