--- a/SPRINT4/Perfil/html/perfil.html
+++ b/SPRINT4/Perfil/html/perfil.html
@@ -103,6 +103,9 @@
     </div>
   
     <button class="save-btn">Salvar Alterações</button>
+    <form action="../../Dasboard/php/deslogar.php" method="post" style="display:inline;">
+        <button type="submit" class="logout-btn">Sair</button>
+      </form>
   </div>
   
     <script src="../js/script.js"></script>
