--- a/SPRINT4/Tela intermediaria/html/telaLoginCadastro.html
+++ b/SPRINT4/Tela intermediaria/html/telaLoginCadastro.html
@@ -3,26 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Login ou Cadastro</title>
-    <link rel="stylesheet" href="../css/telaLoginCadastro.css">
+    <link rel="stylesheet" href="../css/teste2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 <body>
     <div class="menu-toggle">
         <i class="fas fa-bars"></i>
     </div>
-    <div class="sidebar">
-        <div class="logo">
-            <div class="cross"></div>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></li>
-            </ul>
-        </div>
-        <div class="switch">
-            <i class="fas fa-sun"></i>
-            <span class="switch__track"></span>
-            <i class="fas fa-moon"></i>
+    <div class="top-sidebar">
+        <div class="top-sidebar-content">
+            <div class="logo">
+                <div class="cross"></div>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="../../Tela Inicial/html/TelaInicial.html" style="text-decoration: none; color: inherit;"><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></a></li>
+                    <li><a href="../../telaRegistros/html/registros_alimentacao.html" style="text-decoration: none; color: inherit;"><i class="fas fa-apple-alt"></i> <span class="menu-text">Registros Alimentação</span></a></li>
+                    <li><a href="../../telaRegistros/html/telaRegistros.html" style="text-decoration: none; color: inherit;"><i class="fas fa-dumbbell"></i> <span class="menu-text">Registros Atividades Físicas</span></a></li>
+                    <li><a href="../../Dasboard/html/dashboard.html" style="text-decoration: none; color: inherit;"><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></a></li>
+                    <li><a href="../../Tela Educacao/HTML/nova.html" style="text-decoration: none; color: inherit;"><i class="fas fa-book"></i> <span class="menu-text">Educação</span></a></li>
+                </ul>
+            </div>
+            <div class="top-switch-profile">
+                <div class="switch">
+                    <i class="fas fa-sun"></i>
+                    <span class="switch__track"></span>
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="profile-icon">
+                    <i class="fas fa-user-circle"></i>
+                </div>
+            </div>
+            <div class="menu-toggle top-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </div>
 
